--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             
             
             <div class="bottom-container">
-              <a class="footer-link" href="https://www.linkedin.com/in/shivangi-bharti-431466218">LinkedIn</a>
+              <a class="footer-link" href="https://www.linkedin.com/in/shivangi-bharti-431466218?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a>
               <a class="footer-link" href="https://github.com/ShivangiBharti-2">Github</a>
               <a class="footer-link" href="https://instagram.com/_ishivangi._?igshid=ZDdkNTZiNTM=">Instagram</a>
               <p class="copyright">© Shivangi Bharti.</p>
